--- a/src/app/first/first.component.html
+++ b/src/app/first/first.component.html
@@ -1,3 +1,5 @@
-<p>
-  first works!
-</p>
+<h1>FIRST COMPONENT</h1>
+<hr>
+Enter Message : <input type="text" #myinput>
+<button type="button" (click)= "abc(myinput.value)">SEND MESSAGE</button>
+<hr>
