--- a/src/app/first/first.component.html
+++ b/src/app/first/first.component.html
@@ -1,5 +1,5 @@
 <h1>FIRST COMPONENT</h1>
 <hr>
 Enter Message : <input type="text" #myinput>
-<button type="button" (click)= "abc(myinput.value)">SEND MESSAGE</button>
+<button type="button" (click)= "xyz(myinput.value)">SEND MESSAGE</button>
 <hr>
