--- a/src/app/second/second.component.html
+++ b/src/app/second/second.component.html
@@ -1,3 +1,5 @@
-<p>
-  second works!
-</p>
+<h1>SECOND COMPONENT</h1>
+<hr>
+Enter Message : <input type="text" #myinput>
+<button type="button" (click)= "abc(myinput.value)">SEND MESSAGE</button>
+<hr>
