--- a/src/app/third/third.component.html
+++ b/src/app/third/third.component.html
@@ -1,3 +1,5 @@
-<p>
-  third works!
-</p>
+<h1>THIRD COMPONENT</h1>
+<hr>
+Enter Message : <input type="text" #myinput>
+<button type="button" (click)= "atoz(myinput.value)">SEND MESSAGE</button>
+<hr>
